Update Methane Sink Parameters  (#786)
1. Update methane lifetime parameter Tsoil and Tstrat. 
2. Update the coefficients used in the tau OH equation. 
3. Time-varying natural CH4 emissions
4. Update old-new comparison data

--- a/inst/input/hector_picontrol.ini
+++ b/inst/input/hector_picontrol.ini
@@ -106,10 +106,10 @@ SV[1745]=0.185745674   			; volcanic radiative forcing time series
 ;------------------------------------------------------------------------
 [CH4]
 M0=731.41  			; 731.41 ppb preindustrial methane IPCC AR6 Table 7.SM.1, the CH4 forcing equations is calibrated to a M0 of 731.41 ppb
-Tsoil=160 			; lifetime of soil sink (years)
-Tstrat=120          		; lifetime of tropospheric sink (years)
+Tsoil=120 			; lifetime of soil sink (years) Myhre et al., 2013, doi: 10.1017/cbo9781107415324.018
+Tstrat=150          ; lifetime of tropospheric sink (years) Myhre et al., 2013, doi: 10.1017/cbo9781107415324.018
 UC_CH4=2.78			; Tg(CH4)/ppb unit conversion between emissions and concentrations
-CH4N[1750]=335			; Natural CH4 emissions (Tgrams)
+CH4N[1750]=223			; Natural CH4 emissions (Tgrams) constant over simluation
 CH4_emissions[1745]=337.7313     ; emissions time series
 
 ;------------------------------------------------------------------------
@@ -119,11 +119,11 @@ CO_emissions[1745]=348.5273588      ; emissions time series
 NMVOC_emissions[1745]= 60.02182622   ; emissions time series
 
 
-TOH0=6.6			; inital OH lifetime (years)
-CNOX=0.0042			; coefficent for NOX
-CCO=-0.000105			; coefficent for CO
-CNMVOC=-0.000315		; coefficent for NMVOC (non methane VOC)
-CCH4=-0.32			; coefficent for CH4
+TOH0=9.6			; initial OH lifetime (years) Wigley et al. 2002
+CNOX=8.4e-3			; coefficient for NOX, see PR #786
+CCO=-1.575e-4		; coefficient for CO, see PR #786
+CNMVOC=-4.725e-4	; coefficient for NMVOC (non methane VOC), see PR #786
+CCH4=-0.32			; coefficient for CH4 (unitless) Wigley et al. 2002
 
 ;------------------------------------------------------------------------
 [ozone]
@@ -236,7 +236,7 @@ tau=30.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
 rho_HFC125=0.000234 				; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
 delta_HFC125=0.0 				; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 molarMass=120.02				; grams
-HFC125_emissions[1745]=0			;			
+HFC125_emissions[1745]=0			;
 
 [HFC134a_halocarbon]
 tau=14.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
@@ -315,7 +315,7 @@ rho_CCl4=0.000166 				; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
 delta_CCl4=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 molarMass=153.8					; grams
 CCl4_emissions[1745]=0.024856862		;
-	
+
 [CH3CCl3_halocarbon]
 tau=5.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
 rho_CH3CCl3=0.000065 				; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
