--- a/inst/input/hector_ssp119.ini
+++ b/inst/input/hector_ssp119.ini
@@ -118,10 +118,10 @@ SV=csv:tables/ssp119_emiss-constraints_rf.csv   		; volcanic radiative forcing t
 ;------------------------------------------------------------------------
 [CH4]
 M0= 731.41  		; 731.41 ppb preindustrial methane IPCC AR6 Table 7.SM.1, the CH4 forcing equations is calibrated to a M0 of 731.41 ppb
-Tsoil=160 			; lifetime of soil sink (years)
-Tstrat=120          ; lifetime of tropospheric sink (years)
+Tsoil=120 			; lifetime of soil sink (years) Myhre et al., 2013, doi: 10.1017/cbo9781107415324.018
+Tstrat=150          ; lifetime of tropospheric sink (years) Myhre et al., 2013, doi: 10.1017/cbo9781107415324.018
 UC_CH4=2.78			; Tg(CH4)/ppb unit conversion between emissions and concentrations
-CH4N[1750]=335			; Natural CH4 emissions (Tgrams)
+CH4N=csv:tables/core_inputs.csv			; Natural CH4 emissions (Tgrams) see PR #786
 CH4_emissions=csv:tables/ssp119_emiss-constraints_rf.csv     ; emissions time series
 ;CH4_constrain=csv:tables/ssp119_emiss-constraints_rf.csv    ; CH4 concentration constraint
 
@@ -131,11 +131,11 @@ NOX_emissions=csv:tables/ssp119_emiss-constraints_rf.csv     ; emissions time se
 CO_emissions=csv:tables/ssp119_emiss-constraints_rf.csv      ; emissions time series
 NMVOC_emissions=csv:tables/ssp119_emiss-constraints_rf.csv   ; emissions time series
 
-TOH0=6.6			; inital OH lifetime (years)
-CNOX=0.0042			; coefficent for NOX
-CCO=-0.000105		; coefficent for CO
-CNMVOC=-0.000315	; coefficent for NMVOC (non methane VOC)
-CCH4=-0.32			; coefficent for CH4
+TOH0=9.6			; initial OH lifetime (years) Wigley et al. 2002
+CNOX=8.4e-3			; coefficient for NOX, see PR #786
+CCO=-1.575e-4		; coefficient for CO, see PR #786
+CNMVOC=-4.725e-4	; coefficient for NMVOC (non methane VOC), see PR #786
+CCH4=-0.32			; coefficient for CH4 (unitless) Wigley et al. 2002
 
 ;------------------------------------------------------------------------
 [ozone]
