simply the SV inputs

--- a/inst/input/hector_ssp460.ini
+++ b/inst/input/hector_ssp460.ini
@@ -113,7 +113,7 @@ eps_spinup=0.001	; spinup tolerance (drift), Pg C
 ;------------------------------------------------------------------------
 [so2]
 SO2_emissions=csv:tables/ssp460_emiss-constraints_rf.csv 	; emissions time series
-SV=csv:tables/ssp460_emiss-constraints_rf.csv   		; volcanic radiative forcing time series
+SV=csv:tables/core_inputs.csv   		; volcanic radiative forcing time series
 
 ;------------------------------------------------------------------------
 [CH4]
