update peter's email

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,7 @@ Authors@R: c(person("Kalyn", "Dorheim",
 	        role = c("ctb", "dtc"),
 	        comment = c(ORCID = "0000-0002-6850-2504")),
 	    person("Peter", "Scully",
-	        email = "peter.scully@tufts.edu",
+	        email = "ptrscll@gmail.com",
 	        role = "ctb",
 	        comment = c(ORCID = "0009-0007-0234-0366")),
 	     person("Alexey", "Shiklomanov",
