Misc changes a head of V3.5.0 release (#788)
* simplify the input csv data tables 

* add P. Scully to the author list 

* clean up get units function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,10 @@ Authors@R: c(person("Kalyn", "Dorheim",
 	        email = "leeya.pressburger@pnnl.gov", 
 	        role = c("ctb", "dtc"),
 	        comment = c(ORCID = "0000-0002-6850-2504")),
+	    person("Peter", "Scully",
+	        email = "ptrscll@gmail.com",
+	        role = "ctb",
+	        comment = c(ORCID = "0009-0007-0234-0366")),
 	     person("Alexey", "Shiklomanov",
 	        email = "alexey.shiklomanov@nasa.gov",
 	        role = "ctb",
