--- a/inst/input/hector_ssp245.ini
+++ b/inst/input/hector_ssp245.ini
@@ -152,7 +152,7 @@ TN2O0=132               ; initial lifetime of N2O, years
 
 ; An example of setting a time series by individual values
 ; The model will interpolate as necessary between them
-N2O_natural_emissions[1750]=9.72  ; default natural emissions based on a best fit to IPCC AR6 N2O RF
+N2O_natural_emissions=csv:tables/core_inputs.csv     ;
 N2O_emissions=csv:tables/ssp245_emiss-constraints_rf.csv   ; emissions time series
 ;N2O_constrain=csv:tables/ssp245_emiss-constraints_rf.csv   ; N2O concentration constraint
 
