--- a/inst/input/hector_picontrol.ini
+++ b/inst/input/hector_picontrol.ini
@@ -109,8 +109,8 @@ M0=731.41  			; 731.41 ppb preindustrial methane IPCC AR6 Table 7.SM.1, the CH4 
 Tsoil=120 			; lifetime of soil sink (years) Myhre et al., 2013, doi: 10.1017/cbo9781107415324.018
 Tstrat=150          ; lifetime of tropospheric sink (years) Myhre et al., 2013, doi: 10.1017/cbo9781107415324.018
 UC_CH4=2.78			; Tg(CH4)/ppb unit conversion between emissions and concentrations
-CH4N[1750]=223			; Natural CH4 emissions (Tgrams) constant over simluation
-CH4_emissions[1745]=337.7313     ; emissions time series
+CH4N=csv:tables/picontrol.csv			  ; Natural CH4 emissions (Tgrams) constant over simluation
+CH4_emissions[1745]=0    ; 1745 emissions
 
 ;------------------------------------------------------------------------
 [OH]
