--- a/inst/input/hector_ssp434.ini
+++ b/inst/input/hector_ssp434.ini
@@ -180,7 +180,7 @@ RF_misc[1750]=0
 ;------------------------------------------------------------------------
 [temperature]
 S=3.0 			; equilibrium climate sensitivity for 2xCO2 degC (A.4.4 of IPCC AR6)
-diff=2.38		; ocean heat diffusivity, cm2/s calibrated to historical observations Dorheim et al. 2024 for details
+diff=0.724     ; ocean heat diffusivity, cm2/s calibrated to historical observations see PR 789 for details 
 qco2=3.75     	; 2×CO2 RF (7.3.2 of IPCC AR6)
 
 ; Optional global temperature constraint
