--- a/inst/input/hector_ssp460.ini
+++ b/inst/input/hector_ssp460.ini
@@ -79,7 +79,7 @@ luc_emissions=csv:tables/ssp460_emiss-constraints_rf.csv
 luc_uptake=csv:tables/ssp460_emiss-constraints_rf.csv
 
 ; CO2 and temperature effects on the carbon cycle
-beta=0.53     		; CO2 fertilization factor (unitless), calibrated to historical observations Dorheim et al. 2024 for details
+beta=0.627     ; CO2 fertilization factor (unitless), calibrated to historical observations see PR 789 for details
 ;pf.beta=0.53
 ;nonpf.beta=0.53
 q10_rh=1.76   		; Heterotrophic respiration temperature sensitivity factor (unitless), calibrated to historical observations Dorheim et al. 2024 for details
