--- a/inst/input/hector_picontrol.ini
+++ b/inst/input/hector_picontrol.ini
@@ -107,10 +107,10 @@ SV[1745]=0.185745674   			; volcanic radiative forcing time series
 [CH4]
 M0=731.41  			; 731.41 ppb preindustrial methane IPCC AR6 Table 7.SM.1, the CH4 forcing equations is calibrated to a M0 of 731.41 ppb
 Tsoil=120 			; lifetime of soil sink (years) Myhre et al., 2013, doi: 10.1017/cbo9781107415324.018
-Tstrat=150          ; lifetime of tropospheric sink (years) Myhre et al., 2013, doi: 10.1017/cbo9781107415324.018
+Tstrat=150                      ; lifetime of tropospheric sink (years) Myhre et al., 2013, doi: 10.1017/cbo9781107415324.018
 UC_CH4=2.78			; Tg(CH4)/ppb unit conversion between emissions and concentrations
-CH4N=csv:tables/picontrol.csv			  ; Natural CH4 emissions (Tgrams) constant over simluation
-CH4_emissions[1745]=0    ; 1745 emissions
+CH4N=csv:tables/picontrol.csv	; Natural CH4 emissions (Tgrams) constant over simluation
+CH4_emissions[1745]=0           ; 
 
 ;------------------------------------------------------------------------
 [OH]
