update parameter values

--- a/inst/input/hector_ssp119.ini
+++ b/inst/input/hector_ssp119.ini
@@ -79,10 +79,10 @@ luc_emissions=csv:tables/ssp119_emiss-constraints_rf.csv
 luc_uptake=csv:tables/ssp119_emiss-constraints_rf.csv
 
 ; CO2 and temperature effects on the carbon cycle
-beta=0.627     ; CO2 fertilization factor (unitless), calibrated to historical observations see PR 789 for details
+beta=0.65     ; CO2 fertilization factor (unitless), calibrated to historical observations see PR 789 for details
 ;pf.beta=0.53
 ;nonpf.beta=0.53
-q10_rh=0.91   		; Heterotrophic respiration temperature sensitivity factor (unitless), calibrated to historical observations Dorheim et al. 2024 for details
+q10_rh=1.2   		; Heterotrophic respiration temperature sensitivity factor (unitless), calibrated to historical observations see PR 789 for details
 ;pf.q10_rh=1.76
 ;nonpf.q10_rh=1.76
 
@@ -180,7 +180,7 @@ RF_misc[1750]=0
 ;------------------------------------------------------------------------
 [temperature]
 S=3.0 			; equilibrium climate sensitivity for 2xCO2 degC (A.4.4 of IPCC AR6)
-diff=0.724     ; ocean heat diffusivity, cm2/s calibrated to historical observations see PR 789 for details 
+diff=1.042     ; ocean heat diffusivity, cm2/s calibrated to historical observations see PR 789 for details 
 qco2=3.75     	; 2×CO2 RF (7.3.2 of IPCC AR6)
 
 ; Optional global temperature constraint
