--- a/inst/input/hector_picontrol.ini
+++ b/inst/input/hector_picontrol.ini
@@ -81,8 +81,8 @@ CO2_constrain[1745]=277.15	                ;
 
 ; CO2 and temperature effects on the carbon cycle
 ; these are global values, can optionally specify biome-specific ones as above
-beta=0.55     		; CO2 fertilization factor (unitless), calibrated to historical observations see Dorheim et al. in prep for details
-q10_rh=1.76   		; Heterotrophic respiration temperature sensitivity factor (unitless), calibrated to historical observations see Dorheim et al. in prep for details
+beta=0.65     ; CO2 fertilization factor (unitless), calibrated to historical observations see PR 789 for details
+q10_rh=1.2   		; Heterotrophic respiration temperature sensitivity factor (unitless), calibrated to historical observations see PR 789 for details
 
 ; Optional biome-specific warming factors
 ; by default, assume 1.0 (i.e., warms as fast as the globe)
@@ -110,7 +110,7 @@ Tsoil=120 			; lifetime of soil sink (years) Myhre et al., 2013, doi: 10.1017/cb
 Tstrat=150                      ; lifetime of tropospheric sink (years) Myhre et al., 2013, doi: 10.1017/cbo9781107415324.018
 UC_CH4=2.78			; Tg(CH4)/ppb unit conversion between emissions and concentrations
 CH4N=csv:tables/picontrol.csv	; Natural CH4 emissions (Tgrams) constant over simluation
-CH4_emissions[1745]=0           ; 
+CH4_emissions[1745]=0           ;
 
 ;------------------------------------------------------------------------
 [OH]
@@ -172,7 +172,7 @@ RF_misc[1750]=0
 enabled=1
 
 S=3.0 			; equilibrium climate sensitivity for 2xCO2 degC (A.4.4 of IPCC AR6)
-diff=2.38		; ocean heat diffusivity, cm2/s calibrated to historical observations see Dorheim et al. in prep for details
+diff=1.042     ; ocean heat diffusivity, cm2/s calibrated to historical observations see PR 789 for details
 qco2=3.75     		; 2×CO2 RF (7.3.2 of IPCC AR6)
 
 ; Optional global temperature constraint
