--- a/tests/testthat/input/luc_pulse.ini
+++ b/tests/testthat/input/luc_pulse.ini
@@ -156,7 +156,7 @@ rho_bc=0.0508           ; (W yr m–2 C Tg–1) IPCC AR6 radiative efficiency BC
 rho_oc=-.00621          ; (W yr m–2 C Tg–1) IPCC AR6 radiative efficiency OC (7.SM.1.3.1 of IPCC AR6)
 rho_so2=-.00000724      ; (W yr m–2 S Gg-1) IPCC AR6 radiative efficiency SO2 (7.SM.1.3.1 of IPCC AR6)
 rho_nh3=-.00208         ; (W yr m–2 NH3Tg–1) IPCC AR6 radiative efficiency NH3 (7.SM.1.3.1 of IPCC AR6)
-rho_h2o_h2=0.00019      ; (W m −2 H2 Tg-1) Sand et al. 2023, 10.1038/s43247-023-00857-8
+rho_h2o_h2=1.3e-4      ; (W m −2 H2 Tg-1) Sand et al. 2023 ST4, 10.1038/s43247-023-00857-8
 
 ; Miscellaneous radiative forcings default set to 0, or read in from a input table, may be used to read in
 ; additional forcings not modeled by Hector (i.e. solar, bc on snow , contrails from)
