--- a/inst/input/hector_ssp434.ini
+++ b/inst/input/hector_ssp434.ini
@@ -142,7 +142,7 @@ H2_CCO=4.25         ; scaling factor for the CO coefficient that affects OH life
 ;------------------------------------------------------------------------
 [ozone]
 PO3=30.0 			; preindustrial O3 concentration
-CO3_H2=4.09e-3 		; coefficient for H2 contribution to trop. O3 RF (DU O3 Tg H2-1) SI Table 3 of Sand et al. 2023
+CO3_H2=4.09e-3 		       	; coefficient for H2 contribution to trop. O3 RF (DU O3 Tg H2-1) Sand et al. 2023 ST4, 10.1038/s43247-023-00857-8
 NOX_emissions=csv:tables/ssp434_emiss-constraints_rf.csv  	; emissions time series
 CO_emissions=csv:tables/ssp434_emiss-constraints_rf.csv		; emissions time series
 NMVOC_emissions=csv:tables/ssp434_emiss-constraints_rf.csv 	; emissions time series
