--- a/inst/input/hector_ssp460.ini
+++ b/inst/input/hector_ssp460.ini
@@ -79,10 +79,10 @@ luc_emissions=csv:tables/ssp460_emiss-constraints_rf.csv
 luc_uptake=csv:tables/ssp460_emiss-constraints_rf.csv
 
 ; CO2 and temperature effects on the carbon cycle
-beta=0.53     		; CO2 fertilization factor (unitless), calibrated to historical observations Dorheim et al. 2024 for details
+beta=0.65     ; CO2 fertilization factor (unitless), calibrated to historical observations see PR 789 for details
 ;pf.beta=0.53
 ;nonpf.beta=0.53
-q10_rh=1.76   		; Heterotrophic respiration temperature sensitivity factor (unitless), calibrated to historical observations Dorheim et al. 2024 for details
+q10_rh=1.2   		; Heterotrophic respiration temperature sensitivity factor (unitless), calibrated to historical observations see PR 789 for details
 ;pf.q10_rh=1.76
 ;nonpf.q10_rh=1.76
 
@@ -152,7 +152,7 @@ TN2O0=132               ; initial lifetime of N2O, years
 
 ; An example of setting a time series by individual values
 ; The model will interpolate as necessary between them
-N2O_natural_emissions[1750]=9.72  ; default natural emissions based on a best fit to IPCC AR6 N2O RF
+N2O_natural_emissions=csv:tables/core_inputs.csv     ;
 N2O_emissions=csv:tables/ssp460_emiss-constraints_rf.csv   ; emissions time series
 ;N2O_constrain=csv:tables/ssp460_emiss-constraints_rf.csv   ; N2O concentration constraint
 
@@ -180,7 +180,7 @@ RF_misc[1750]=0
 ;------------------------------------------------------------------------
 [temperature]
 S=3.0 			; equilibrium climate sensitivity for 2xCO2 degC (A.4.4 of IPCC AR6)
-diff=2.38		; ocean heat diffusivity, cm2/s calibrated to historical observations Dorheim et al. 2024 for details
+diff=1.042     ; ocean heat diffusivity, cm2/s calibrated to historical observations see PR 789 for details 
 qco2=3.75     	; 2×CO2 RF (7.3.2 of IPCC AR6)
 
 ; Optional global temperature constraint
